# ChangeLog for net-wireless/iwl6000-ucode
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/iwl6000-ucode/ChangeLog,v 1.3 2010/07/20 22:05:39 flameeyes Exp $

  20 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -iwl6000-ucode-9.193.4.1.ebuild, iwl6000-ucode-9.221.4.1.ebuild:
  Remove old version and update description as noted by Tim Harder in bug
  #329161.

*iwl6000-ucode-9.221.4.1 (25 Jun 2010)

  25 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +iwl6000-ucode-9.221.4.1.ebuild:
  Version bump.

*iwl6000-ucode-9.193.4.1 (10 Jun 2010)

  10 Jun 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +iwl6000-ucode-9.193.4.1.ebuild, +metadata.xml:
  Initial import of ucode for IWL 6000 series cards.
