@@ -1,16 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST iwlwifi-6000-ucode-9.221.4.1.tgz 216806 RMD160 7d5dd5d7366bd46141d80e63d8e7f1a468e8afbf SHA1 a888cf54974702594e82bcbfca20c26d8f906e9f SHA256 7f04623231663dc4ee63df32fd890bfa9514dce1fab9dc7a25fda90350da836b
-EBUILD iwl6000-ucode-9.221.4.1.ebuild 768 RMD160 bb5297cb92eb04d30addb9dcb9d0c3d7d5a78370 SHA1 9c667e9f5d61a22835cb2a18637bb08ba8d092dc SHA256 b4070a80bb45043519ee13732322e045bb1650bf2c7a5a9068825036798537cf
-MISC ChangeLog 785 RMD160 17b0f1a88eb957e98d93c8a72e74d61de4cb5e15 SHA1 2b94c2cb9eeef1673e1c94c4caff9dfd983f9675 SHA256 50a343e4581d2b225fc17ede688346466cce8c2e05353dc15fcb52eb343b293b
+EBUILD iwl6000-ucode-9.221.4.1.ebuild 788 RMD160 ccc6edf8466bb5640d8604ae45c5f021204ac564 SHA1 5b71e02dd23f9660bc8f0dc3e34f11c41241b1c0 SHA256 1d1ab967d73768d6a54877b52b012c47e647558100eb72224b3bcab4b93d70ae
+MISC ChangeLog 938 RMD160 a041d779958d8f1ec45affa4457a77502cee21a2 SHA1 ca4d5d88207697303970930229d13ee9c48b4e4a SHA256 a538f53cd8e5e0a2744fb15cbef49e4103d5324e8b2c0f20614e48ef9c9aa9a6
 MISC metadata.xml 210 RMD160 d62fe1b7fcdb6ed1cf8f29606f11005f72052018 SHA1 c2d95873b2490997439036d93c54c9452c1ed0b1 SHA256 033e97715bc19256fb7c105f739eeb5d7e58c4556fdb08face36c7270ce0c82a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iJwEAQEIAAYFAk59rwoACgkQfXuS5UK5QB0wPQQAgkJHBb0C1yZ0937j7S/8LwH7
-Q34yIvgWU37pFt36FQVtIxPu7rM253xK8iEf+Ak5SpyFtvJ3EELWCfayHQRa0OiO
-SqZFxlIZqt8bEXRprOf36xdIZ5Qm5L2GTjZAu7Wssnu65NJ8QKCCZyvhCrTgq7DK
-V2qirHTrGact5MhSwm8=
-=tWi9
+iQEcBAEBAgAGBQJP268uAAoJEBzRPIrUMBNCXjUH/jJxSnb0WU2i8ggnwNVi3nVS
+fLs3R0yBdOuqiglkMC+dXvo1HJOhk/phHe64uzAlUZ52p4pMXaqlFllkHFHwYy3I
+Ps3Tkvg4JTzH19e9vYG/1ra6SzghIwEvRwh8JkKLTd+DRPqo239uk1AmAsOsBClM
+xojK7VPu5Hg+SygQqRLWtQ2k+aXEHrECD6gJcSbgcOvDxDO4LA+DompmRl32U1j4
+C/cCuVWpL+j4FtDppv2bxmiWlLtzbGx3EP2ESuKOrJ39Uxj97LZ/Lcct4XtSKCQt
+KgGheAEXS49hi7m4HWv8eXCD5yhSYr2FoXILFg/VBFVz5HFVSD9/lNprKvkvtnc=
+=kF7B
 -----END PGP SIGNATURE-----
