@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/iwl6000-ucode
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/iwl6000-ucode/ChangeLog,v 1.3 2010/07/20 22:05:39 flameeyes Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/iwl6000-ucode/ChangeLog,v 1.4 2012/06/15 21:54:44 flameeyes Exp $
+
+  15 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org>
+  iwl6000-ucode-9.221.4.1.ebuild:
+  Fix description. Thanks to Christian Samsel in bug #421233.
 
   20 Jul 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   -iwl6000-ucode-9.193.4.1.ebuild, iwl6000-ucode-9.221.4.1.ebuild:
